fixed layout issues for 420px and below

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -9,6 +9,12 @@
   margin: 0 auto;
 }
 
+@media screen and (max-width: 420px) {
+  .container {
+    display: inline-grid;
+  }
+}
+
 .header {
   display: flex;
   justify-content: left;
